# MeetingAssistant

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: .architecture  .overview  .roadmap  my-rules.mdc
.github/workflows/: tests.yml
docker/: Dockerfile.base  Dockerfile.gpu  docker-compose.yml  manage.sh
docs/: data_flow.md  edge_optimization.md  layer_fusion.md  mobile_deployment.md  model_compression.md  operator_optimization.md  resource_management.md  system_monitoring.md  whisper_integration.md
examples/: access_control_demo.py  agent_management_demo.py  audit_logging_demo.py  consent_management_demo.py  data_minimization_demo.py  device_build_demo.py  edge_optimization_demo.py  encryption_demo.py  enhanced_communication_demo.py  int4_quantization_demo.py  key_management_demo.py  layer_fusion_demo.py  mobile_optimization_demo.py  model_compression_demo.py  offline_operation_demo.py  operator_optimization_demo.py  performance_monitoring_demo.py  recovery_demo.py  resource_management_demo.py  rights_management_demo.py  system_config_demo.py  update_mechanism_demo.py  whisper_integration_demo.py
pruning/: Dockerfile  README.md  docker-compose.yml  prune.sh  requirements.txt
pruning/configs/: default.json
pruning/scripts/: prune_whisper.py
research/: edge_deployment_optimization.md  multi_agent_framework.md  privacy_security.md  research_plan.md  research_summary.md  speech_recognition_models.md
scripts/: run_tests.sh
src/: __init__.py  demo_data_flow.py  demo_system_monitoring.py  main.py  run_demo.py
src/agents/: __init__.py  audio_processing_agent.py  nlp_processing_agent.py  transcription_agent.py
src/core/: __init__.py  agent.py  alert_system.py  buffer_manager.py  data_persistence.py  health_check.py  orchestrator.py  resource_management.py  stream_processor.py  system_monitoring.py
tests/: __init__.py  conftest.py  test_layer_fusion.py  test_model_compression.py  test_model_manager.py  test_model_pruning.py  test_nlp_processing_agent.py  test_operator_optimization.py  test_resource_management.py  test_speculative_decoding.py
tests/agents/: test_audio_processing_agent.py  test_transcription_agent.py
tests/benchmark/: test_performance.py
tests/core/: test_agent.py  test_agent_state_persistence.py  test_enhanced_communication.py  test_message.py  test_orchestrator.py  test_performance_monitor.py  test_state_manager.py
tests/integration/: test_audio_transcription_pipeline.py
tests/test_data_flow/: __init__.py  test_buffer_manager.py  test_data_persistence.py  (+1 more)
(+40 files in other folders)
